merubah alamat dan extensi

--- a/Belajar 1.html
+++ b/Belajar 1.html
@@ -13,7 +13,7 @@
             <td>nama : Muhammad Umar Alhadi</td>
         </tr>
         <tr>
-            <td>Alamat : Jalan Mliwis 1 No.22 Tegalreja Cilacap Selatan</td>
+            <td>Alamat : jalan bogowonto kecamatan donan</td>
         </tr>
         <tr>
             <td>Usia : 20 tahun</td>
