dirubah data program

--- a/Belajar 1.html
+++ b/Belajar 1.html
@@ -1,23 +1,75 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Web Belajar Umar</title>
+<title>Bejalar_1</title>
 </head>
 <body>
-    <table border="5" width="300" height="50" bordercolor=candy>
-        <tr>
-            Tabel Mahasiswa
-            <td>nama : Muhammad Umar Alhadi</td>
-        </tr>
-        <tr>
-            <td>Alamat : jalan bogowonto kecamatan donan</td>
-        </tr>
-        <tr>
-            <td>Usia : 20 tahun</td>
-        </tr>
+<marquee>Halaman Web Sederhana ini Merupakan <b>"Belajar coba umar untuk mengingatkan kembali kenangan yang dulu pernah ada"</b> </marquee>
+<table width="520" border="3" align="center" cellpadding="1" cellspacing="1" bordercolor="#2525112" bgcolor="lightcyan">
+  <tr bgcolor="darkblue">
+    <th colspan="3" height="65">
+    <p><font color="white" face="times new roman" size="5">DATA BIODATA SAYA</font></p>
+    </th>
+  </tr>
+  <tr>
+    <td width="153"><b>Nama</b></td>
+    <td width="23"><div align="center" >:</div></td>
+    <td width="326"> Muhammad Umar Alhadi </td>
+  </tr>
+  <tr>
+    <td><b>Alamat</b></td>
+    <td><div align="center" >:</div></td>
+    <td> Jalan Mliwis 1 No.22 Tegalreja Cilacap Selatan</td>
+  </tr>
+  <tr>
+    <td><b>Jenis Kelamin</b></td>
+    <td><div align="center" >:</div></td>
+    <td>  Laki-laki </td>
+  </tr>
+  <tr>
+    <td><b>Tempat Tanggal Lahir</b></td>
+    <td><div align="center" >:</div></td>
+    <td> Kebumen,21-02-1997</td>
+  </tr>
+  <tr>
+    <td><b>Agama </b></td>
+    <td><div align="center" >:</div></td>
+    <td> Islam</td>
+  </tr>
+  <tr>
+    <td height="175"><b>RIWAYAT PENDIDIKAN </b></td>
+    <td><div align="center" >:</div></td>
+    <td><p> A.PENDIDIKAN FORMAL </p>
+      <table width="284" align="center" bordercolor="#000000">
+      <tr>
+        <td > i  . SD/MI </td>
+        <td >:</td>
+        <td >  </td>
+      </tr>
+      <tr>
+        <td > ii  . SMP </td>
+        <td >:</td>
+        <td >  </td>
+      </tr>
+      <tr>
+        <td > iii . SMA </td>
+        <td >:</td>
+        <td > </td>
+      </tr>
+      <tr>
+        <td > iV . Perguruan Tinggi </td>
+        <td >:</td>
+        <td > </td>
+      </tr>
     </table>
+    <p > B. NON FORMAL : </p>
+  </td>
+  </tr>
+  <tr>
+    <td><b>EMAIL</b></td>
+    <td><div align="center" >:</div></td>
+    <td>umaralhadi79@gmail.com</td>
+  </tr>
+  <p align="center"><font color="white" face="times new roman">copyright</font></p>
+</table>
 </body>
 </html>
